--- a/include/Silicon.tex
+++ b/include/Silicon.tex
@@ -1,7 +1,7 @@
 % ==============================================================================
 \chapter{Semiconductor detectors}
 \label{sec:SiliconTheory}
-%==============================================================================    
+% ==============================================================================    
 
 Semiconductor materials have a great advantage in many radiation
 detection applications. The main benefits are the high energy
@@ -546,6 +546,7 @@ depletion depth is used for the detection of radiation in silicon
 detectors as described in the next section.
 
 \subsection{Reverse-biased pn-junction}
+\label{sec:reversedBiasedPNjunction}
 
 The application of a reverse bias voltage to a pn-junction is crucial
 in the detection of radiation in silicon detectors. It increases the
