[Software] updates on the digitiser

--- a/include/Conclusions.tex
+++ b/include/Conclusions.tex
@@ -22,13 +22,17 @@ these activities is given here below.
 \cref{sec:SiliconTheory} gives an introduction to semiconductor
 material with an accent on silicon which is predominant in tracking
 detectors in particle physics experiments. Theoretical concepts are
-introduced. Concepts used later in the thesis for the simulation and
-understanding of the test-beam data are deeply studied. Different
-methods modeling the energy deposition spectrum of high-energy
-particles are given. The Bichsel model is the solution which gives the
-most accurate energy spectrum especially for thin sensors.
+introduced and used later in the thesis for the simulation and
+understanding of the test-beam data. Different methods modeling the
+energy deposition spectrum of high-energy particles are given. The
+Bichsel model is the solution which gives the most accurate energy
+spectrum especially for thin sensors. The charge transport in a
+pn-junction is studied. Drift and diffusion in a pixel detector are
+introduced with a simplified model. The position measurement and ways
+to improve the spatial resolution are investigated.
 
-\cref{ch:FE_electronics}
+The Timepix3 pixel readout ASIC is introduced. In
+\cref{ch:FE_electronics},
 
 \cref{ch:Software}
 
