--- a/include/Conclusions.tex
+++ b/include/Conclusions.tex
@@ -31,10 +31,15 @@ pn-junction is studied. Drift and diffusion in a pixel detector are
 introduced with a simplified model. The position measurement and ways
 to improve the spatial resolution are investigated.
 
-The Timepix3 pixel readout ASIC is introduced. In
-\cref{ch:FE_electronics},
+The Timepix3 pixel readout ASIC is used in the CLICdp Timepix3
+telescope as well as for the study of thin active-edge
+sensors. \cref{ch:FE_electronics} introduces this hybrid pixel readout
+ASICs. The calibration of the threshold and the TOT into energy is
+explained using internal test pulses. This will later be used for the
+test-beam studies and simulations. 
 
-\cref{ch:Software}
+The reconstruction software frameworks used for the reconstruction of
+data and simulations are described in\cref{ch:Software}.
 
 \cref{ch:Telescope}
 
@@ -42,7 +47,6 @@ The Timepix3 pixel readout ASIC is introduced. In
 
 \cref{ch:ActiveEdgeSensors}
 
-\section{Outlook}
 \begin{itemize}
 \item Thin planar sensors reaching their limits: other solutions such
   as HV-CMOS can be also attractive.
