--- a/include/Conclusions.tex
+++ b/include/Conclusions.tex
@@ -1,51 +1,67 @@
 % ==============================================================================
 \chapter{Conclusions}
 \label{ch:conclusions}
-%==============================================================================    
+% ==============================================================================    
 
-This thesis, gives an overview on the CLIC experiment. The accelerator
-is briefly described and the physics potential of the experiment is
-given. The requirements on the CLIC detector are presented with a
-focus of the vertex detector which is the main subject of the work
-presented.
+The vertex detector plays a key role to fully exploit the physics
+potential at CLIC. To meet the challenging demands on the precision
+physics, pixel detectors with high spatial and timing resolutions with
+low material are required.
 
-An overview of the R\&D on the planar pixelated silicon detectors is
-detailed with laboratory and test-beam
-measurements. \textsc{Geant4}-based and TCAD simulations are performed
-and validated with a comparison to the collected data. In this thesis,
-we span a large set of activities starting from calibration of
-assemblies, to resolution studies of the telescope used to finally
-characterise thin sensors and different options of active-edge
-technology and their impact on the particle detection. A summary of
-these activities is given here below.
+In this thesis, an overview on the R\&D of planar pixel sensors for
+CLIC is given. Prototypes are designed to characterise thin and
+active-edge sensors. During this thesis, we span a large set of
+activities for this characterisation in test-beam, laboratory
+measurements and simulations. A summary is given in the following.
 
 \cref{sec:SiliconTheory} gives an introduction to semiconductor
 material with an accent on silicon which is predominant in tracking
 detectors in particle physics experiments. Theoretical concepts are
-introduced and used later in the thesis for the simulation and
-understanding of the test-beam data. Different methods modeling the
-energy deposition spectrum of high-energy particles are given. The
-Bichsel model is the solution which gives the most accurate energy
-spectrum especially for thin sensors. The charge transport in a
-pn-junction is studied. Drift and diffusion in a pixel detector are
-introduced with a simplified model. The position measurement and ways
-to improve the spatial resolution are investigated.
+introduced and later used for the simulation and understanding of the
+test-beam data. Different methods modeling the energy deposition
+spectrum of high-energy particles are given. The Bichsel model gives
+the most accurate energy spectrum for thin sensors. The charge
+transport in a pn-junction is studied. Drift and diffusion are
+calculated in a pn-junction and used in the next chapters for
+simulations. The position measurement and ways to improve the spatial
+resolution are investigated.
 
 The Timepix3 pixel readout ASIC is used in the CLICdp Timepix3
-telescope as well as for the study of thin active-edge
+telescope as well as for the study of thin and active-edge
 sensors. \cref{ch:FE_electronics} introduces this hybrid pixel readout
-ASICs. The calibration of the threshold and the TOT into energy is
-explained using internal test pulses. This will later be used for the
-test-beam studies and simulations. 
+ASICs. The calibration methods to convert the threshold DAC and the
+TOT into energy is explained. The calibration is applied to the
+test-beam data and the energy spectrum in data agrees well with
+simulations and the calibration is therefore validated.
 
-The reconstruction software frameworks used for the reconstruction of
-data and simulations are described in\cref{ch:Software}.
+The reconstruction software frameworks used for the analysis of data
+and simulations are described in \cref{ch:Software}. The AllPix
+reconstruction framework and TCAD simulation tools are explored as
+well.
 
-\cref{ch:Telescope}
+The CLICdp Timepix3 telescope is presented in \cref{ch:Telescope}. It
+allows for the reconstruction of the tracks with a high
+resolution. The telescope is implemented in \textsc{Geant}-4 based
+AllPix simulations. The tracking resolution of $\sim2\,\micron$ is
+extracted in simulations. This is in agreement with the expectations.
 
-\cref{ch:ThinSensorsStudies}
+Test-beam measurements and Allpix simulations for $50-150\,\micron$
+thin planar sensors are described in \cref{ch:ThinSensorsStudies}. The
+studies are done with a pixel pitch of $55\,\micron$. The simulations
+are in good agreement with data therefore they are used to predict the
+resolution with smaller pixels of $25\,\micron$ pitch where data is
+still not available. This small pitch and $50\,\micron$ thick sensor
+is intended to be used for the CLIC vertex detector where a hit
+resolution of $\sim3\,\micron$ is wished to be achieved. The
+simulations show that achieving this resolution with $25\,\micron$
+pixels is not possible.
 
-\cref{ch:ActiveEdgeSensors}
+\cref{ch:ActiveEdgeSensors} investigates the efficiency of active-edge
+sensors. Different edge widths and guard-ring configurations are
+investigated. A TCAD simulation of the edge is as well implemented. In
+simulations, as expected, the floating guard-ring shows a higher
+breakdown voltage and a small loss of energy deposition in the guard
+ring and therefore a high efficiency up to the trench of the sensor.
 
 \begin{itemize}
 \item Thin planar sensors reaching their limits: other solutions such
@@ -61,3 +77,19 @@ data and simulations are described in\cref{ch:Software}.
   fully confirm the expectations. Ladders of detectors should be built
   to fully confirm the assumptions.
 \end{itemize}
+
+
+Laboratory and test-beam measurements on prototypes
+with thin sensors are presented. \textsc{Geant4}-based and TCAD
+simulations are performed and validated with a comparison to the
+collected data. In this thesis, we span a large set of activities
+starting from calibration of assemblies, to resolution studies of the
+telescope used to finally characterise thin sensors and different
+options of active-edge technology and their impact on the particle
+detection. A summary of these activities is given here below.
+
+This thesis, gives an overview on the CLIC experiment. The accelerator
+is briefly described and the physics potential of the experiment is
+given. The requirements on the CLIC detector are presented with a
+focus of the vertex detector which is the main subject of the work
+presented.
