[Silicon] update on the spatial resolutions

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -681,3 +681,14 @@ abstract = "The ROOT system in an Object Oriented framework for large scale data
       title          = "SciPy optimize minimize",
       url            = "http://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.minimize.html"
 }
+
+@article{Turchetta:1993vu,
+      author         = "Turchetta, R.",
+      title          = "{Spatial resolution of silicon microstrip detectors}",
+      journal        = "Nucl. Instrum. Meth.",
+      volume         = "A335",
+      year           = "1993",
+      pages          = "44-58",
+      doi            = "10.1016/0168-9002(93)90255-G",
+      SLACcitation   = "%%CITATION = NUIMA,A335,44;%%"
+}
