[CLIC] Konrad's comments

--- a/include/CLIC.tex
+++ b/include/CLIC.tex
@@ -202,8 +202,8 @@ complex.
   \centering
   \includegraphics[width=\textwidth]{figures/CLIC/CLIC-layout2015pub.pdf}
   \caption{Schematic layout of the CLIC accelerator complex at
-    $\sqrt{s}=3\,\tev$. At this stage, each linac is fed by a
-    drive-beam generation complex~\cite{Felzmann:2157041}.}
+    $\sqrt{s}=3\,\tev$. Each linac is fed by a drive-beam generation
+    complex~\cite{Felzmann:2157041}.}
   \label{fig:CLIC_accelerator}
 \end{figure}
 
@@ -220,16 +220,19 @@ the bunch train is limited to 156~ns long with a repetition frequency
 of 50~Hz.
 
 
-Klystrons are foreseen to provide the RF power used by the
-acceleration cavities. The klystrons are not directly used to
-accelerate the main beam at CLIC since a large number of them would be
-needed and their efficiency would be too low. A two-beam acceleration
-scheme is used to reach the nominal collision energy. A drive beam
-with a low energy of $2.4\,\gev$ and a high current of 100~A is used
-to transfer the energy of the klystrons to the main beam which has a
-lower current and higher energy. The drive beam is decelerated over a
-distance of 878~m and the extracted energy is provided to the main
-beam with a series of Power Extraction and Transfer Structures (PETS).
+Traditionally, klystrons are used in accelerators to provide the RF
+power to the main beam. However, for CLIC, klystrons are not directly
+used to accelerate the main beam since a large number of them would be
+needed and their efficiency would be too low at $12\,\gigahertz$. A
+two-beam acceleration scheme is used to reach the nominal collision
+energy. A drive beam is running in parallel to the main beam. The
+drive beam has a low energy of $2.4\,\gev$ and a high current of
+100~A. It is used to transfer the energy of the klystrons to the main
+beam which has a lower current and higher energy. Power Extraction and
+Transfer Structures (PETS) are special RF devices which extract the
+power of the drive beam by decelerating the beam. The extracted energy
+is then provided to the main beam. About 3000 accelerating structures,
+each being on average 878~m long, are used in CLIC.
 
 
 \cref{tab:NominalMachineParams} summarises the nominal beam parameters
