Calibration cross-checked with Xavi

--- a/bibliography/refs.bib
+++ b/bibliography/refs.bib
@@ -636,6 +636,12 @@ author = "F. Krummenacher",
   howpublished = "SLAC private communication"
 }
 
+@misc{MedipixCapa,
+  author = "Llopart Cudie, Xavier",
+  year = "2016",
+  howpublished = "Medipix group private communication"
+}
+
 
 @article{AlipourTehrani2016,
 title = "Recent results with HV-CMOS and planar sensors for the \{CLIC\} vertex detector ",
