--- a/include/ActiveEdgeSensors.tex
+++ b/include/ActiveEdgeSensors.tex
@@ -299,13 +299,13 @@ implementation of the sensors in TCAD simulations.
     \captionof{table}{Layers in the geometry description used for the
       sensor production (Picture from 23-FGR).}
     \label{tab:PixelStackDimensions}
-    \begin{tabular}{l c c}
+    \begin{tabular}{l l}
       \toprule
       Layer number & Layer \\
       \midrule
       6 & metal\\
-      3 & implant \\
-      8 & implant (to control the leakage current) \\
+      3 & Mask to etch oxide \\
+      8 & pixel implant \\
       9 & UBM \\
       15 & passivation opening \\
       5 & contact to connect Al to Si \\
